--- a/EssentialFeed.xcodeproj/xcshareddata/xcschemes/CI.xcscheme
+++ b/EssentialFeed.xcodeproj/xcshareddata/xcschemes/CI.xcscheme
@@ -29,7 +29,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "FD9FB4262534425B00E8EEAD"
